[gd_scene load_steps=4 format=3 uid="uid://cexqy3net8pmx"]

[ext_resource type="Script" path="res://Components/Content/content.gd" id="1_cvopx"]
[ext_resource type="PackedScene" uid="uid://c082n4cs6hk50" path="res://Components/Content/content_campo.tscn" id="2_361el"]
[ext_resource type="PackedScene" uid="uid://cr8vp416m406q" path="res://Utils/API/API.tscn" id="3_1bl7w"]

[node name="Content" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cvopx")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="HeaderContainer" type="HBoxContainer" parent="PanelContainer/MainContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="PanelContainer/MainContainer/HeaderContainer"]
layout_mode = 2
text = "<--"

[node name="Title" type="Label" parent="PanelContainer/MainContainer/HeaderContainer"]
layout_mode = 2

[node name="BodyContainer" type="VBoxContainer" parent="PanelContainer/MainContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ContentCampo" parent="PanelContainer/MainContainer/BodyContainer" instance=ExtResource("2_361el")]
layout_mode = 2

[node name="FooterContainer" type="HBoxContainer" parent="PanelContainer/MainContainer"]
layout_mode = 2

[node name="Atras" type="Button" parent="PanelContainer/MainContainer/FooterContainer"]
layout_mode = 2
text = "Atras"

[node name="Api" parent="." instance=ExtResource("3_1bl7w")]
